--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,8 @@
         lineNumbers: true,
         mode: "python",
         theme: "monokai",
+        tabSize: 4,
+        indentUnit: 4,
       });
       $("#results").css("display:block");
     </script>
