--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,6 @@
 
 <head>
   <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/cyborg/bootstrap.min.css" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='styles.css') }}" rel="stylesheet"/>
 
   <meta charset="utf-8"/>
   <meta content="initial-scale=1, width=device-width" name="viewport"/>
@@ -14,35 +13,36 @@
 
   <script src="{{ url_for('static', filename='codemirror.js') }}"></script>
   <script src="{{ url_for('static', filename='python.js') }}"></script>
-  
+
   <link rel="stylesheet" href="{{ url_for('static', filename='codemirror.css'	) }}">
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='monokai.css') }}">
+  <link href="{{ url_for('static', filename='styles.css') }}" rel="stylesheet"/>
 
   <title>Pseudocode Parser: {% block title %}{% endblock %}</title>
 
 </head>
-
-<body>
-  <nav class="navbar navbar-default">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="{{ url_for('index') }}">Pseudocode Parser</a>
-      </div>
-      <div id="navbar" class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-          <li class="" id="nav-home"><a href="{{ url_for('index') }}">Home</a></li>
-          <li class="" id="nav-about"><a href="{{ url_for('about') }}">About</a></li>
-          <li class="" id="nav-contact"><a href="">Contact</a></li>
-        </ul>
-      </div><!--/.nav-collapse -->
+<nav class="navbar navbar-static-top navbar-default">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="{{ url_for('index') }}">Pseudocode Parser</a>
     </div>
-  </nav>
+    <div id="navbar" class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li class="" id="nav-home"><a href="{{ url_for('index') }}">Home</a></li>
+        <li class="" id="nav-about"><a href="{{ url_for('about') }}">About</a></li>
+        <li class="" id="nav-contact"><a href="">Contact</a></li>
+      </ul>
+    </div><!--/.nav-collapse -->
+  </div>
+</nav>
+<body>
+
 
   {% if get_flashed_messages() %}
     <header>
