fixed a spelling error

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,7 @@
   <meta content="initial-scale=1, width=device-width" name="viewport"/>
 
   <script src="{{ url_for('static', filename='jquery-3.1.1.min.js') }}"></script>
-  <script src="{{ url_for('static', filename='boostrap.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='bootstrap.min.js') }}"></script>
 
   <script src="{{ url_for('static', filename='codemirror.js') }}"></script>
   <script src="{{ url_for('static', filename='python.js') }}"></script>
