big stuff. integrated into website. added support for loops, if, elif, else, functions, end, and more. did a lot of QA

--- a/templates/index.html
+++ b/templates/index.html
@@ -54,6 +54,7 @@
           input: $("#parse-input").val(),
         },
         success: function (result) {
+          $("#parse-input").val("");
           editor.getDoc().setValue(result);
         }
       });
