--- a/templates/404.html
+++ b/templates/404.html
@@ -1,1 +1,12 @@
-404
+{% extends "layout.html" %}
+
+{% block title %}
+  404
+{% endblock %}
+
+{% block main %}
+  <div class="container">
+    <h3>404: Not Found</h3>
+    <p>The page you are looking for could not be found or does not exist. Please try again.</p>
+  </div>
+{% endblock %}
