--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,16 +6,10 @@
 
 {% block main %}
   <script>
-    $("#nav-home").attr("class", "");
-    $("#nav-about").attr("class", "");
     $("#nav-contact").attr("class", "active");
   </script>
   <div class="container">
-    <div class="text-left">
-      <h3>Goal: Give us money</h3>
-      <p>
-      If you'd like to give us money, contact us at <strong>123-456-789@gmail.com</strong>
-      <p>
-    </div>
+    <h3>Contact Us</h3>
+    <h4>Email - <a href="mailto:pseudocodeparser@gmail.com" style="text-decoration: none">pseudocodeparser@gmail.com</a></h4>
   </div>
 {% endblock %}
