a lot of QA, hunting down bugs and stuff. fixed undo even further, added some indentation support

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,6 +36,7 @@
       theme: "monokai",
       tabSize: 4,
       indentUnit: 4,
+      readOnly: true,
     });
     $("#results").css("display:block");
 
