--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,6 +10,6 @@
   </script>
   <div class="container">
     <h3>Contact Us</h3>
-    <h4>Email - <a href="mailto:pseudocodeparser@gmail.com" style="text-decoration: none">pseudocodeparser@gmail.com</a></h4>
+    <p>Email - <a href="mailto:pseudocodeparser@gmail.com" style="text-decoration: none">pseudocodeparser@gmail.com</a></p>
   </div>
 {% endblock %}
