--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,7 +36,7 @@
           <li class="" id="nav-about"><a href="{{ url_for('about') }}">About</a></li>
           <li class="" id="nav-contact"><a href="{{ url_for('contact') }}">Contact</a></li>
         </ul>
-      </div><!--/.nav-collapse -->
+      </div>
     </div>
   </nav>
 
