--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,6 +35,7 @@
           <li class="" id="nav-home"><a href="{{ url_for('index') }}">Home</a></li>
           <li class="" id="nav-about"><a href="{{ url_for('about') }}">About</a></li>
           <li class="" id="nav-contact"><a href="{{ url_for('contact') }}">Contact</a></li>
+          <li class="" id="nav-help"><a href="{{ url_for('help') }}">Help</a></li>
         </ul>
       </div>
     </div>
