changed a few layout things

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,6 +36,9 @@
           <li class="" id="nav-about"><a href="{{ url_for('about') }}">About</a></li>
           <li class="" id="nav-contact"><a href="{{ url_for('contact') }}">Contact</a></li>
         </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="" id="nav-help"><a href="#">Help</a></li>
+        <ul>
       </div>
     </div>
   </nav>
