--- a/templates/404.html
+++ b/templates/404.html
@@ -6,7 +6,7 @@
 
 {% block main %}
   <div class="container">
-    <h3>404: Not Found</h3>
+    <h3>404: Page Not Found</h3>
     <p>The page you are looking for could not be found or does not exist. Please try again.</p>
   </div>
 {% endblock %}
