added is divisible by support

--- a/templates/help.html
+++ b/templates/help.html
@@ -81,6 +81,15 @@
 
     Calling a function can be done with the "call" keyword or by just typing the function name with parentheses as would actually happen in Python code. The name of the function must be specified somewhere in the line of pseudocode. The arguments are optional. The parser is not responsible for checking the existence of the function or the required arguments.
 
+    <h4>Lists</h4>
+    <span class="example">create a list called array</span>
+    <span class="example">add 3 to array</span>
+    <span class="example">append 2, 6, 7 and 9 to array</span>
+    <span class="example">sort array</span>
+    <span class="example">remove 6 from array</span>
+
+    Lists can be created and modified with a few simple commands. Create a list using "create" or "make". Add one or multiple elements to the list with "add" or "append". Sort a numeric list with "sort" followed by the list's name. Finally, you can remove an element from a list using "remove" or "delete" followed by the element that you want to remove and "from" the list's name.
+ 
     <br><br><br>
   </div>
 {% endblock %}
