added demo video to help page. updated contact and about page.

--- a/templates/about.html
+++ b/templates/about.html
@@ -12,7 +12,7 @@
     <div class="text-left">
       <h3>Our Goal: Make Coding Simpler</h3>
       <p>
-        When first learning to program, ideas, not syntax, are of utmost importance. Our goal is to make coding simpler, and in doing so, bring code to more people. No more getting bogged down by syntax. No more messing with indentation. Simply say what you mean to say, and see the code generated right in front of your eyes. Not happy with the results? Head over to our <a href="{{ url_for('contact') }}">contact page</a> and shoot us an email. We are happy to help! We hope you enjoy this product.
+        When first learning to program, ideas, not syntax, are of utmost importance. Our goal is to make coding simpler, and in doing so, bring code to more people. No more getting bogged down by syntax. No more messing with indentation. Simply say what you mean to say, and see the code generated right in front of your eyes. Not happy with the results? Shoot us an email at <a href="mailto:pseudocodeparser@gmail.com">pseudocodeparser@gmail.com</a>. We are happy to help! We hope you enjoy this product.
       <p>
     </div>
   </div>
