--- a/templates/help.html
+++ b/templates/help.html
@@ -26,6 +26,12 @@
 
     <br><br>
 
+    <h3>Demo</h3>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/uGMOYU6qdis" frameborder="0" allowfullscreen></iframe>
+
+    <br><br>
+
     <h3>Supported Syntax</h3>
     <br>
     <h4>Print</h4>
