--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,6 +10,6 @@
   </script>
   <div class="container">
     <h3>Contact Us</h3>
-    <p>Email - <a href="mailto:pseudocodeparser@gmail.com">pseudocodeparser@gmail.com</a></p>
+    If you have any questions, comments, concerns, or compliments, please reach out to us! You can email us at <a href="mailto:pseudocodeparser@gmail.com">pseudocodeparser@gmail.com</a>.
   </div>
 {% endblock %}
